# python-projects

CLI-projects/bank-cli-app/: README.md  pyproject.toml
CLI-projects/bank-cli-app/src/bank_cli_app/: __init__.py
CLI-projects/key-secure/: README.md  main.py  pyproject.toml
CLI-projects/task-manager/: README.md  main.py  pyproject.toml  task.txt
bank-cli-app/src/bank_cli_app/: main.py  utility.py
